# substrate-parachain-boilerplate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: test-code.yml
docker/: Dockerfile  parachain.Dockerfile
node/: Cargo.toml
node/src/: aura_or_nimbus_consensus.rs  builder.rs  chain_spec.rs  cli.rs  client.rs  command.rs  instant_finalize.rs  lib.rs  main.rs  service.rs
node/src/chain_specs/: dolphin.rs  mod.rs  wisp.rs
node/src/rpc/: dolphin.rs  mod.rs  wisp.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
polkadot-parachain/: Cargo.toml
polkadot-parachain/src/chain_spec/: bridge_hubs.rs
primitives/common/: Cargo.toml
primitives/common/src/: assets.rs  constants.rs  lib.rs  types.rs  xcm.rs
primitives/session-keys/: Cargo.toml
primitives/session-keys/src/: aura.rs  lib.rs  nimbus.rs  util.rs  vrf.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs  migration.rs
runtime/dolphin/: Cargo.toml
runtime/dolphin/src/: assets_config.rs  lib.rs
runtime/dolphin/src/weights/: mod.rs
runtime/src/: lib.rs
runtime/src/weights/: mod.rs
runtime/wisp/: Cargo.toml
runtime/wisp/src/: assets_config.rs  currency.rs  fee.rs  impls.rs  lib.rs  nimbus_session_adapter.rs  xcm_config.rs
runtime/wisp/src/weights/: collator_selection.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  mod.rs  pallet_asset_manager.rs  pallet_assets.rs  pallet_author_inherent.rs  pallet_balances.rs  pallet_collective.rs  pallet_democracy.rs  pallet_membership.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_utility.rs
runtime/wisp/src/weights/xcm/: mod.rs  pallet_xcm_benchmarks_fungible.rs  pallet_xcm_benchmarks_generic.rs
scripts/benchmarking/: run_all_benchmarks.sh
zombienet/: k8s_dev.toml  local-dev.toml  local_dev.toml  local_with_statemint.toml
