[package]
authors = ['Cute_Wisp']
edition = "2021"
homepage = ''
license = 'GPL-3.0'
name = "runtime-common"
repository = ''
version = '4.0.2'

[dependencies]
# Substrate dependencies
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37", default-features = false }

# Self dependencies
common-primitives = { path = '../../primitives/common', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "common-primitives/std",
  "pallet-transaction-payment/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
